--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 .utmp/
 [Ll]ibrary/
 /[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-[Ll]ogs/
-[Uu]ser[Ss]ettings/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Ll]ogs/
+/[Uu]ser[Ss]ettings/
 *.log
 
 # MemoryCaptures can get excessive in size.
